--- a/popup.html
+++ b/popup.html
@@ -3,16 +3,35 @@
 <head>
     <style>
         body {
-            min-width: 500px;
-        }
-        button {
-            outline: none;
+            width: 1000px;
+            height: auto;
         }
     </style>
-</head>
-<body>
-<button id="getUserData">Get User Data</button>
 
+    <link rel="stylesheet" href="https://app.promorepublic.com/resources/css/common.css?180311" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://app.promorepublic.com/resources/css/font-awesome.min.css?161006" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://app.promorepublic.com/resources/bootstrap/css/bootstrap.min.css?150310" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://app.promorepublic.com/resources/css/jquery.mydd.css?150331" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://app.promorepublic.com/resources/css/theme.min.css?180829" rel="stylesheet" type="text/css">
+</head>
+
+
+
+<script src="https://app.promorepublic.com/resources/js/resources_loader.js?160712"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://app.promorepublic.com/resources/js/jquery.xdomainrequest.min.js"></script>
+<script src="https://app.promorepublic.com/resources/js/common.js?180905"></script>
+<script src="https://app.promorepublic.com/resources/js/window.js?180830"></script>
+<script src="https://app.promorepublic.com/resources/bootstrap/js/bootstrap.min.js?151030"></script>
+<script src="https://app.promorepublic.com/resources/js/jquery.mydd.js"></script>
+<script src="https://app.promorepublic.com/resources/js/auth.js?180905"></script>
+<script src="https://app.promorepublic.com/resources/js/connect.js?180905"></script>
+
+
+<body>
+
+
+<script src="https://app.promorepublic.com/resources/js/jstz-1.0.4.min.js"></script>
 <script src="popup.js"></script>
 </body>
 </html>
